# Vk-Trial

./: BuildUtilities.cmake  CMakeLists.txt
Common/: CMakeLists.txt  Camera.hpp  GameTimer.cpp  GeometryGenerator.cpp  GeometryGenerator.hpp  VkPipelineDescriptorSignature.cpp  VkPipelineDescriptorSignature.h  VkTexture.cpp  VkTexture.h  VkUploadBuffer.cpp  VkUploadBuffer.h  VkUtilities.cpp  VkUtilities.h  VulkanApp.cpp  VulkanApp.h  VulkanRenderContext.cpp  VulkanRenderContext.hpp  Win32Application.cpp  Win32Application.h
VkHelloWorld/: CMakeLists.txt  Cube.cpp  Sample.cpp  main.cpp
VkHelloWorld/shaders/: box.frag  box.vert
